--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "rickgdps-api-worker",
   "version": "1.0.0",
   "main": "worker.js",
-  "scripts": {
-    "build": "esbuild worker.js --bundle --outfile=dist/worker.js --platform=browser"
+"scripts": {
+  "build": "esbuild worker.js --bundle --outfile=dist/worker.js --platform=browser",
+  "deploy": "npx wrangler deploy"
+}
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12"
