--- a/wrangler.yml
+++ b/wrangler.yml
@@ -1,7 +1,7 @@
 name = "rickgdps-api-worker"
 type = "javascript"
 
-main = "./src/index.js"          # Set the entry point to your built file
+main = "./src/index.ts"          # Set the entry point to your built file
 compatibility_date = "2025-02-27"
 
 [build]
